Visualization evaluation in. Visualization future in. Need to jimmy the scan/reconstruction future work into the right place. Then read through. Then the spell checking etc. begins.

--- a/Final-Report/bibliography.bib
+++ b/Final-Report/bibliography.bib
@@ -206,3 +206,11 @@
     year      = "1997",
     address   = "https://www.cis.rit.edu/htbooks/mri/chap-8/chap-8.htm"
 }
+
+@MISC {fetalatlas},
+    author       = "Biomedical Image Analysis Group",
+    institution  = "Imperial College London",
+    title        = "A Multi-channel 4D Probabilistic Atlas of the Developing Fetal Brain",
+    howpublished = "http://biomedic.doc.ic.ac.uk/brain-development/index.php?n=Main.Fetal",
+    note         = "{Last Accessed: 12/06/15}"
+}
