--- a/Final-Report/evaluation.tex
+++ b/Final-Report/evaluation.tex
@@ -124,7 +124,151 @@ The researchers still want a way to manually inspect the slices stacks to check 
 Another point raised was that there is sometimes ambiguity when deciding what part of a landmark to mark. Having an example image of each landmark would clarify both what the user is looking for, and also where to mark it.
 
 \newpage
-\section{Visualization}
-Three things. Understand. Clear. Configurable.
+\section{Visualizations - Uncertainty}
+There are three things that make a good visualization. Firstly you must be able to understand what it is showing. A visualization can have all the bells and whistles, look fantastic, but if you can't understand what you're looking at then it's useless. Secondly it must be clear. An uncertainty visualization should communicate the uncertainty without over-complicating or distracting the viewer from what is important. Thirdly it must be configurable. Being able to tweak the visualization to highlight different areas and bring out different information makes a visualization more flexible and useful in a wider range of scenarios.
 
-% General Format -> What we wanted to find out. Go through each question. For those that are quantitative give us a graph. For those that aren't then talk about What they said.
+With these three principles in mind the users were asked three questions for each visualization. The first they were asked was 'How easy was it to understand what the visualization was showing?'. The results for each visualization is shown in figure \ref{fig:eval_visualization_q1}.
+
+\begin{figure}[H]
+  \centering
+  \begin{subfigure}[b]{0.32\textwidth}
+    \includegraphics[width=\textwidth]{images/evaluation/graph_thresholding_1.png}
+    \caption*{Thresholding}
+    \label{fig:eval_visualization_q1_thresholding}
+  \end{subfigure}%
+  ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+    %(or a blank line to force the subfigure onto a new line)
+  \begin{subfigure}[b]{0.32\textwidth}
+    \includegraphics[width=\textwidth]{images/evaluation/graph_sphere_1.png}
+    \caption*{Sphere}
+    \label{fig:eval_visualization_q1_sphere}
+  \end{subfigure}%
+  ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+    %(or a blank line to force the subfigure onto a new line)
+  \begin{subfigure}[b]{0.32\textwidth}
+    \includegraphics[width=\textwidth]{images/evaluation/graph_surface_1.png}
+    \caption*{Surface}
+    \label{fig:eval_visualization_q1_surface}  
+  \end{subfigure}
+  \caption{1 is very difficult. 10 is very easy.}\label{fig:eval_visualization_q1}
+\end{figure}
+
+The results show that the easiest visualization to understand overall was thresholding. From speaking to the researchers this was likely to be the case because this kind of view is what they are used to dealing with. A lot of their work involves them looking closely at individual slice stacks and scrolling through lots of data and so the 2D overlay of uncertainty was a logical extension of this.
+
+Conceptually it is also the easiest visualization to grasp, the uncertainty is simply overlayed on the scan in 2D and you can see it floating around in 3D. For them to use the surface view there needs to be a compelling, unique feature that can't be done with thresholding.
+
+The sphere visualization seems to be the hardest to understand with some users ranking it as low as 2 or 3 out of 10. The biggest problem people had with the sphere was the lack of a grounding and this sense of disjointness with the raw data put many people off.
+
+Whilst not as easy to understand as thresholding the surface (built from the reconstruction mask) was better received than the sphere. The surface fixes the main issue that the sphere has by giving a sense of where in the scan you are looking at, which the users seemed to like. However currently the surface used to represent the brain is still fairly rough, and whilst it does resemble a brain it isn't as clear as perhaps it could be.
+
+The second question they were asked was 'How clearly did the visualization highlight the most uncertain region?'. The results are shown in figure \ref{fig:eval_visualization_q2}.
+
+\begin{figure}[H]
+  \centering
+  \begin{subfigure}[b]{0.32\textwidth}
+    \includegraphics[width=\textwidth]{images/evaluation/graph_thresholding_2.png}
+    \caption*{Thresholding}
+    \label{fig:eval_visualization_q2_thresholding}
+  \end{subfigure}%
+  ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+    %(or a blank line to force the subfigure onto a new line)
+  \begin{subfigure}[b]{0.32\textwidth}
+    \includegraphics[width=\textwidth]{images/evaluation/graph_sphere_2.png}
+    \caption*{Sphere}
+    \label{fig:eval_visualization_q2_sphere}
+  \end{subfigure}%
+  ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+    %(or a blank line to force the subfigure onto a new line)
+  \begin{subfigure}[b]{0.32\textwidth}
+    \includegraphics[width=\textwidth]{images/evaluation/graph_surface_2.png}
+    \caption*{Surface}
+    \label{fig:eval_visualization_q2_surface}  
+  \end{subfigure}
+  \caption{1 is not at all clear. 10 is very clear.}\label{fig:eval_visualization_q2}
+\end{figure}
+
+The results show a similar story to the first question. Thresholding was deemed the clearest at highlighting areas of high uncertainty. Speaking to the researchers suggests that this was because with thresholding the exact location of the uncertainty could be determined, whereas the other visualizations only narrowed it down to a region.
+
+The surface visualization was the next best, followed by the sphere. Feedback suggests that it was easier to understand where the uncertainty was in the surface because there was a point of reference which simply was not present in the sphere.
+
+The effectiveness of the surface visualization is highly dependant on the surface that is used. For the demonstration the surface was generated using the reconstruction mask which has a few rough edges impacting the clarity and appeal. The mask was primarily used as it foregoes the need for a complex registration step, which mapping a general model of the organ would require. However, having a general model allows two reconstructions to be compared side by side much more easily.
+
+There were a number of suggestions of ways to improve mitigate this issue with the sphere. The most simple was to mark the top, bottom, left and right of the sphere. This was something that I had planned to do but didn't quite manage to implement with the time available.
+
+Other ways of doing this would also be to project common landmarks onto the sphere. For example, the position of both eyes could be shown.
+
+A more interactive approach could also be taken to solve this problem; a splitscreen visualization where the user could select a point in the reconstruction and the corresponding point on the sphere could be highlighted. Similarly if a point on the sphere was selected then the corresponding line could be marked in the volume.
+
+Some users pointed out that better use of the colour range could be made by using different transfer functions. Currently the visualizations have a very simple 'colour' toggle that effectively changes the mapping from 'white to black' to 'black to red'. This is an area that I didn't focus too much on as I was trying to get the functionality of the visualizations solid before doing the fine-tuning.
+
+The problem essentially boils down to the fact that there are 256 * 256 * 256 colours available and currently only 256 of them are being used. Changing this would be an easy fix and would instantly increase the contrast in all of the visualizations.
+
+The users were then asked 'How easy was the visualization to configure to target different areas of interest?'. The results are shown in figure \ref{fig:eval_visualization_q3}.
+
+\begin{figure}[H]
+  \centering
+  \begin{subfigure}[b]{0.32\textwidth}
+    \includegraphics[width=\textwidth]{images/evaluation/graph_thresholding_3.png}
+    \caption*{Thresholding}
+    \label{fig:eval_visualization_q3_thresholding}
+  \end{subfigure}%
+  ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+    %(or a blank line to force the subfigure onto a new line)
+  \begin{subfigure}[b]{0.32\textwidth}
+    \includegraphics[width=\textwidth]{images/evaluation/graph_sphere_3.png}
+    \caption*{Sphere}
+    \label{fig:eval_visualization_q3_sphere}
+  \end{subfigure}%
+  ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+    %(or a blank line to force the subfigure onto a new line)
+  \begin{subfigure}[b]{0.32\textwidth}
+    \includegraphics[width=\textwidth]{images/evaluation/graph_surface_3.png}
+    \caption*{Surface}
+    \label{fig:eval_visualization_q3_surface}  
+  \end{subfigure}
+  \caption{1 is very difficult. 10 is very easy.}\label{fig:eval_visualization_q3}
+\end{figure}
+
+Again the thresholding was deemed easiest to control, at least in part due to the simplicity of the options available: you either define a range of uncertainty to see or view the worst $x\%$. Interestingly the surface and sphere swapped roles and the sphere was deemed easier to control than the surface.
+
+Largely they have the same controls; both allow you to specify how far into the volume to sample (half/full) and how to accumulate uncertainty (average/worst/best). However, the surface visualization adds the complication of picking the right combination of surface model and registration options to get it to function correctly. Clearly these options need to be better documented or presented differently to avoid confusion.
+
+A common insight for each of the visualizations was that it would be useful to have the ability to target specific areas of the brain to show just the uncertainty in that region. Often researchers only care about one area; for example they may be interested in computing the volume of a certain region. This could be achieved relatively simply by allowing the user to create a custom mask or by having a set of general masks that can be registered to the reconstruction.
+
+\newpage
+\section{Visualizations - Next Scan Plane}
+The same three principles used to evaluate the uncertainty visualizations apply to visualizing the next scan plane. The only difference is that the information being communicated is focused on a scan, not the uncertainty itself.
+
+The researchers were initially asked 'How easy was it to understand what the visualization was showing?'. The responses are shown in figure \ref{fig:eval_next_scan_plane_q1}.
+
+\begin{figure}[h]
+    \centering
+  \includegraphics[width=0.6\textwidth]{images/evaluation/graph_next_scan_plane_1.png}
+    \caption{1 is very difficult. 10 is very easy.}\label{fig:eval_next_scan_plane_q1}
+\end{figure}
+
+Generally it seems the visualization is easy to understand. It was mentioned that using a cylinder to represent the scanning direction is slightly ambiguous as it was unclear which direction it was intended to represent. In fact the direction could be either way and so the ambiguity is intended but to make it clear that it is representing a direction then an arrow would be more explicit.
+
+The next question asked was 'How clearly did the visualization illustrate the next best scan plane?'. The responses are shown in figure \ref{fig:eval_next_scan_plane_q2}.
+
+\begin{figure}[h]
+    \centering
+  \includegraphics[width=0.6\textwidth]{images/evaluation/graph_next_scan_plane_2.png}
+    \caption{1 is not at all clear. 10 is very clear.}\label{fig:eval_next_scan_plane_q2}
+\end{figure}
+
+Most users felt that the visualization was clear, although similarly to the sphere visualization some found it to be a little detached from the scan, especially in 3D. Adding some axes to refer to would give some context to the directions. Another point raised was that on the MRI scanner used by one of the researchers the scan direction was not specified by a vector, but by angles. Adapting the format, or adding the option to display it like this would be a very simple change.
+
+Then they were asked 'How easy was the visualization to configure to target different areas of interest?'. The responses are shown in figure \ref{fig:eval_next_scan_plane_q3}.
+
+\begin{figure}[h]
+    \centering
+  \includegraphics[width=0.6\textwidth]{images/evaluation/graph_next_scan_plane_3.png}
+    \caption{1 is very difficult. 10 is very easy.}\label{fig:eval_next_scan_plane_q3}
+\end{figure}
+
+Again the results are largely positive with most liking the ability to target values that were particularly bad, however more control would be preferred. In particular it would be useful to be able to target specific regions of the brain; for example if they are only interested in the prefrontal cortex it would be beneficial to specifically target, or give more importance to, uncertain points in that region.
+
+Those researchers who were involved with actually performing scans were asked if the visualization was necessary or whether they would be happy for the scanner to automatically set up the next scan without showing it to them. The response was resoundingly in favour of the visualization; having control of the scan is very important for them as it allows them to take into account factors, such as particular scanner limitations, that the technique may not know about.
+
+An additional benefit of this visualization is that it would allow the radiographer to isolate smaller areas that needed further scanning. Instead of acquiring a complete stack which may take 3 minutes, this allows them to focus on a smaller region which could be acquired in less time and only generate data that was genuinely needed. This tightens up the feedback loop allowing more smaller scans to be taken to target problem areas.
